[package]
name = "rusty-translation"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "FMM translation operators."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-translation"
repository = "https://github.com/rusty-fast-solvers/rusty-translation"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_compression"
crate-type = ["lib", "cdylib"]

[dependencies]
num = "0.*"
ndarray = { version = "0.*", features = ["rayon"] }
ndarray-linalg = { version = "0.13", features = ["netlib-system"] }
rand = "0.8"
itertools = "0.10"
rayon = "1.5"
rand_distr = "0.4"
lapack = "0.*"
lax = "0.*"
plotters = "0.*"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
openblas = []
