[package]
name = "rusty-field"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Field representations and their translation."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-field"
repository = "https://github.com/rusty-fast-solvers/rusty-field"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_field"
crate-type = ["lib", "cdylib"]

[dependencies]
num = "0.*"
ndarray = { version = "0.*", features = ["rayon"] }
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }
rusty-base = { version = "0.1", path = "../rusty-base" }
rusty-green-kernel = { version = "0.1", path = "../rusty-green-kernel" }
rusty-compression = { version = "0.*", path = "../rusty-compression"}
rand = "0.8"
itertools = "0.10"
rayon = "1.5"
rand_distr = "0.4"
lapack = "0.*"
lax = "0.*"
plotters = "0.*"
vtkio = "0.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
openblas = []
